@@ -18,4 +18,4 @@ distdir:
 	@echo -n
 
 #########################################################################
-# EOF.
+### Dependencies:
